fixed spacing by adding utility classes to image and paragraphs

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,6 @@ body{
     margin: 0 auto 0 auto;*/
 }
 
-
 nav a:hover, a.current {
   color: #d71a00;
 }
@@ -43,7 +42,25 @@ img{
 	padding: 0;
 }
 .main-wrapper{
-	width: 80%;
+	width: 75%;
 	margin:0 auto;
 	padding:10px;
+}
+.pt-1{
+	padding-top: 10px;
+}
+.pt-2{
+	padding-top: 20px;
+}
+.pt-3{
+	padding-top: 40px;
+}
+.mt-1{
+	margin-top: 10px;
+}
+.mt-2{
+	margin-top: 20px;
+}
+.mt-3{
+	margin-top: 40px;
 }
